kubernetes/madt4bc-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: madt4bc-ingress
  namespace: dynabic
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1200"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1200"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1200"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - madt4bc.dynabic.dev
        - madt4bc-neo4j.dynabic.dev
        - madt4bc-bolt.dynabic.dev
        - madt4bc-influx.dynabic.dev
      secretName: madt4bc-cert
  rules:
    - host: madt4bc.dynabic.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: madt4bc
                port:
                  number: 3000
    - host: madt4bc-neo4j.dynabic.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: madt4bc-neo4j
                port:
                  number: 7474
    - host: madt4bc-bolt.dynabic.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: madt4bc-neo4j
                port:
                  number: 7687
    - host: madt4bc-minio.dynabic.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: madt4bc-minio
                port:
                  number: 9000
    - host: madt4bc-influx.dynabic.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: madt4bc-influxdb
                port:
                  number: 8086
